2015-08-10  Jamison Hope  <jrh@theptrgroup.com>

	* PreProcess.java (handleArg): Fix typo: repeatedly search for
	separator character, not charAt(0).

2015-07-31  Per Bothner  <per@bothner.com>

	* PreProcess.java: Bunch of changes to support pre-processing
	gnu/lists/PrimVector.template to many classes.

2015-07-29  Per Bothner  <per@bothner.com>

	* PreProcess.java: Add support for "-o" option, to write to a
	separate output file.  In this mode we remove rather than
	comment out unused code.
	Add support for substitutions, with arguments like "=KEY=SUBST".

2015-05-01  Per Bothner  <per@bothner.com>

	* BoundedHashable.java: New interface.
	* HashUtils.java: New class with convenience methods.

2015-03-06  Per Bothner  <per@bothner.com>

	* AbstractHashTable.java (getOrDefault):  New method.

2014-04-23  Per Bothner  <per@bothner.com>

	* generate-charsets.scm: New helper script to generate the
	standard char-sets for srfi14.scm.
	Uses chunks of code from testsuite/lib-test.scm.

2014-02-17  Per Bothner  <per@bothner.com>

	* ExitCalled.java: New utility class - extends Error.

2014-01-05  Per Bothner  <per@bothner.com>

	* Makefile.am: Merge into ../../../gnu/Makefile.am and remove.

2013-12-07  Per Bothner  <per@bothner.com>

	* IntHashTable.java (hash): Remove needless test.

2013-09-16  Per Bothner  <per@bothner.com>

	* PreProcess.java: Add java8 support.

2013-09-06  Per Bothner  <per@bothner.com>

	* IntHashTable.java: Implement deletion support.
	(remove): New method.

2013-02-20  Per Bothner  <per@bothner.com>

	* HashNode.java (hash): Rename field to keyHash and make protected.
	(<init>): New 3-operand constructor, to also set keyHash.
	* GeneralHashTable.java (getEntryHashCode): Update accordingly.
	(makeEntry): Simplify by using new HashNode constructor.

2012-07-27  Per Bothner  <per@bothner.com>

	* RunTestScript.java: Support new directives Java-options
	and Kawa-options.

2012-06-08  Jamison Hope  <jrh@theptrgroup.com>
