@@ -1,3 +1,8 @@
+2016-05-02  Per Bothner  <per@bothner.com>
+
+	* Arrays.java (hashCode(Array)): New static method.
+	* AbstractSequence.java (hashCode): Use new method for Arrays.
+
 2016-05-01  Per Bothner  <per@bothner.com>
 
 	* ConstVector.java: Remove class.  Use FVector.makeVector instead.
